# gbase

./: .gitignore  Cargo.toml  README.md  todo.md
assets/: armor.glb  bezier.wgsl  box_filter.wgsl  camera.wgsl  camera_encase.wgsl  compute.wgsl  deferred.wgsl  gizmo.wgsl  grass.wgsl  grass_compute.wgsl  grass_compute_1.wgsl  grass_compute_2.wgsl  grass_compute_draw.wgsl  grass_compute_instance.wgsl  grass_new.wgsl  grass_old.wgsl  median_filter.wgsl  mesh.wgsl  shader.wgsl  texture.wgsl  transform.wgsl  triangle.wgsl  ui.wgsl
assets/models/: coord.blend  coord.blend1  coord.glb  coord2.blend  coord2.blend1  coord2.glb  cube.blend  cube.blend1  cube.glb  flower.glb  mario.glb  mario2.glb  penguin.glb  penguin2.glb
assets/shaders/: bezier.wgsl  bloom_blur.wgsl  bloom_combine.wgsl  bloom_combine_compute.wgsl  bloom_downsample.wgsl  bloom_extract.wgsl  bloom_extract_compute.wgsl  bloom_upsample.wgsl  camera.wgsl  cloud_noise.wgsl  cloud_weather_map.wgsl  clouds.wgsl  compute.wgsl  deferred.wgsl  gaussian_filter.wgsl  grass.wgsl  grass_compute_draw.wgsl  grass_compute_instance.wgsl  grass_deferred.wgsl  new_shader.wgsl  shader.wgsl  shader_imports.wgsl  shadow_pass.wgsl  sprite_renderer.wgsl  stencil.wgsl  texture.wgsl  texture_helper.wgsl  texture_import.wgsl  tonemap.wgsl  transform.wgsl  ui.wgsl  utils.wgsl
assets/shaders/random/: rand.wgsl
assets/temporary/: cloud_params_3.txt
assets/textures/: clouds_weather_map.png~
assets/textures/sprites/: bird.ase  bluebird-midflap1.ase  player0.aseprite
assets/tmp/: cloud_params_1.txt  cloud_params_5.txt
examples/: audio.rs  bezier.rs  camera.rs  camera_encase.rs  compute.rs  filesystem.rs  gizmos.rs  grass.rs  input.rs  logging.rs  mesh.rs  multi_renderpass.rs  post_processing.rs  render.rs  scrolling_text.rs  sprite.rs  test.rs  texture.rs  time.rs  transform.rs  triangle.rs  ui.rs  window.rs
examples/camera/: Cargo.toml  Makefile  index.html
examples/camera/src/: lib.rs  main.rs
examples/clouds/: Cargo.toml  Makefile  cloud_app.rs  cloud_renderer.rs  clouds.rs  index.html  main.rs  noise.rs
examples/clouds/src/: cloud_renderer.rs  lib.rs  main.rs  noise.rs
examples/custom_ui/: Cargo.toml  Makefile  index.html
examples/custom_ui/src/: lib.rs  main.rs  ui_font.rs  ui_layout.rs  ui_renderer.rs
examples/egui/: Cargo.toml  Makefile  index.html
examples/egui/src/: lib.rs  main.rs
examples/entity/: entity_dynamic.rs  entity_enum.rs  entity_mega.rs  entity_simple.rs  main.rs
examples/flappy_bird/: Cargo.toml  Makefile  index.html
examples/flappy_bird/src/: lib.rs  main.rs  sprite_atlas.rs  sprite_renderer.rs
examples/flappy_bird_entity/: Cargo.toml  Makefile  index.html
examples/flappy_bird_entity/src/: lib.rs  main.rs  sprite_atlas.rs  sprite_renderer.rs
examples/gizmos/: Cargo.toml  Makefile  index.html
examples/gizmos/src/: lib.rs  main.rs
examples/grass/: Cargo.toml  Makefile  grass.rs  grass_app.rs  grass_renderer.rs  index.html  main.rs
examples/grass/src/: grass_renderer.rs  lib.rs  main.rs
examples/hot_reload/: Cargo.toml  Makefile
examples/hot_reload/saved/: cloud_params_1.txt  cloud_params_2.txt  cloud_params_3.txt  cloud_params_4.txt  cloud_params_4324716650052465459.txt  cloud_params_5.txt  image_2880_1694.info
examples/hot_reload/saved/test2/: image_120_67.info  image_1920_1080.info  image_240_135.info  image_480_270.info  image_960_540.info
examples/hot_reload/src/: atlas.rs  audio.rs  cloud_app.rs  cloud_renderer.rs  gizmos.rs  lib.rs  logging.rs  main.rs  sprite_app.rs  sprite_atlas.rs  sprite_packer.rs  sprite_renderer.rs  ui.rs
examples/hot_reload/tmp/: grass_app.rs
examples/mesh/: Cargo.toml  Makefile  index.html
examples/mesh/src/: bloom.rs  lib.rs  main.rs
examples/physics/: Cargo.toml  Makefile  index.html
examples/physics/src/: lib.rs  main.rs
examples/post_process/: Cargo.toml  Makefile  index.html
examples/post_process/src/: lib.rs  main.rs
examples/shader_imports/: Cargo.toml  Makefile  index.html
examples/shader_imports/src/: lib.rs  main.rs
examples/shadows/: Cargo.toml  Makefile  index.html
examples/shadows/src/: lib.rs  main.rs  shadow_pass.rs
examples/sprite/: main.rs  sprite_app.rs  sprite_atlas.rs  sprite_packer.rs  sprite_renderer.rs
examples/texture/: Cargo.toml  Makefile  index.html
examples/texture/src/: lib.rs  main.rs
examples/transform/: Cargo.toml  Makefile  index.html
examples/transform/src/: lib.rs  main.rs
examples/ui/: Cargo.toml  Makefile  index.html
examples/ui/src/: lib.rs  main.rs
examples/web/: Cargo.toml  index.html  makefile
examples/web/src/: app.rs  grass.rs  lib.rs  noise.rs  triangle.rs
examples/wesl_test/: Cargo.toml  Makefile  index.html
examples/wesl_test/src/: lib.rs  main.rs
src/: app.rs  assets.rs  audio.rs  egui_ui.rs  filesystem.rs  hot_reload.rs  lib.rs  random.rs  render.rs  time.rs  window.rs
src/asset/: builders.rs  cache.rs  handle.rs  implementations.rs  mod.rs  reload.rs  types.rs
src/collision/: collision_2d.rs  collision_3d.rs  mod.rs
src/filesystem/: mod.rs
src/hot_reload/: dll.rs  mod.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/profile/: cpu_profiler.rs  gpu_profiler.rs  mod.rs  profiler.rs  tracy.rs
src/render/: app_info.rs  arc.rs  bind_group.rs  buffer.rs  cache.rs  framebuffer.rs  mesh.rs  mod.rs  pipeline.rs  profiler.rs  render_pass.rs  shader.rs  texture.rs  vertex.rs
src/render/core/: bind_group.rs  buffer.rs  cache.rs  framebuffer.rs  mod.rs  pipeline.rs  render_pass.rs  shader.rs  texture.rs  vertex.rs
src/render/helpers/: app_info.rs  bind_group.rs  box_filter.rs  buffer.rs  camera.rs  debug_input.rs  deferred.rs  deferred_buffers.rs  deferred_renderer.rs  depth_buffer.rs  framebuffer.rs  gamma_correction.rs  gaussian_filter.rs  gizmo.rs  glb.rs  handle.rs  median_filter.rs  mod.rs  pipeline.rs  post_processing.rs  render_pass.rs  shader.rs  (+7 more)
src/time/: mod.rs  profile.rs  timer.rs
tools/atlas_generator/: Cargo.toml
utils/gbase_utils/: Cargo.toml
utils/random_wgsl/: Cargo.toml
web/: Cargo.toml  index.html  makefile
web/src/: lib.rs
(+62 files in other folders)
