[package]
name = "gbase"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.9", features = ["rwh_05", "rwh_06"] }
wgpu = { version = "24.0.0", features = [] }
glam = { version = "0.24.2", features = ["serde"] }
bytemuck = { version = "1.14.0", features = ["derive"] }
encase = { version = "0.6.1", features = ["glam"] }
anyhow = "1.0.95"
rodio = { version = "0.17.3", features = ["wasm-bindgen"] }     # cpal?
notify = { version = "7.0.0" }                                  # replaced
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-tracy = { version = "0.11.4", optional = true }

# hot reloading
dlopen = { version = "0.1.8", optional = true, features = [] }

# non wasm
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "0.3.0", features = ["macro"] }

# wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
base64 = "0.22.1"
web-sys = { version = "0.3.64", features = [
    "Location",
    "HtmlCanvasElement",
    "GpuCanvasContext",
    "Storage",
] }

[features]
# default = ["trace_tracy"]
default = ["hot_reload"]
hot_reload = ["dep:dlopen"]
trace = []
trace_tracy = ["dep:tracing-tracy"]

[workspace]
members = [
    "utils/gbase_utils",

    "tools/atlas_generator",

    "examples/post_process",
    "examples/clouds",
    "examples/grass",
    "examples/ui",
    "examples/gizmos",
    "examples/mesh",
    "examples/camera",
    "examples/transform",
    "examples/texture",
    "examples/flappy_bird",
]
