[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gbase = { path = ".." }

bytemuck = { version = "1.14.0", features = ["derive"] }

wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"

[lib]
crate-type = ["cdylib", "rlib"]
