[package]
name = "hot_reload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gbase = { path = "../.." }
pollster = { version = "0.3.0", features = ["macro"] }
bytemuck = { version = "1.14.0", features = ["derive"] }
encase = { version = "0.6.1", features = ["glam"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[lib]
crate-type = ["rlib", "dylib"]

[features]
default = []
hot_reload = ["gbase/hot_reload"]
