[package]
name = "shadows"
version = "0.1.0"
edition = "2021"

[features]
default = []
hot_reload = ["gbase/hot_reload"]
trace_tracy = ["gbase/trace_tracy"]

[dependencies]
gbase = { path = "../..", features = ["trace_tracy"] }
gbase_utils = { path = "../../utils/gbase_utils" }
bytemuck = { version = "1.14.0", features = ["derive"] }
encase = { version = "0.6.1", features = ["glam"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"

[lib]
crate-type = ["rlib", "cdylib"]
