[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gbase = { path = "../.." }

bytemuck = { version = "1.14.0", features = ["derive"] }
encase = { version = "0.6.1", features = ["glam"] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
# wasm-bindgen = "0.2.88"
# wasm-bindgen-futures = "0.4.38"


console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3.64", features = [
    "Location",
    "HtmlCanvasElement",
    "GpuCanvasContext",
] }


[lib]
crate-type = ["cdylib", "rlib"]
